[tool.poetry]
name = "multi-cloud-utils"
version = "0.1.0"
description = "Helpful utility functions for AWS, Azure, GCP and many more cloud providers"
authors = ["kalyanr <kalyan.ben10@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rawwar/multi-cloud-utils-python"
repository = "https://github.com/rawwar/multi-cloud-utils-python"
documentation = "https://github.com/rawwar/multi-cloud-utils-python"
keywords = ["aws", "azure", "gcp", "cloud", "utils", "multi-cloud", "utility"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
packages = [
    { include = "mcu" },
]

[tool.poetry.urls]
"Changelog" = "https://github.com/rawwar/multi-cloud-utils-python/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/rawwar/multi-cloud-utils-python/issues"

[tool.poetry.scripts]
meltano = "mcu.cli:main"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8"
